--- a/7_cash_flow.ipynb
+++ b/7_cash_flow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "2021,Q1      -34260  -19966  178849  359236"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1276,6 @@
     "    hovertemplate='Cash or Equivalent Balance: %{y}<extra></extra>'\n",
     "))\n",
     "\n",
-    "# Update layout\n",
     "fig.update_layout(\n",
     "    barmode='stack',\n",
     "    title='Cash Flow by Year/Quarter',\n",
@@ -1284,7 +1283,9 @@
     "    yaxis_title='Amount',\n",
     "    hovermode='x unified'\n",
     ")\n",
-    "fig.update_layout(height=800)  # Set figure size (in pixels)"
+    "fig.update_layout(height=800)\n",
+    "\n",
+    "fig.show()"
    ]
   }
  ],
